<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#ffffff">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/logo"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/relativeLayout"
        android:layout_marginTop="-50dp"
        android:background="@drawable/waves"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/century"
        android:text="@string/enter_phone_number_below"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="#000000" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:orientation="horizontal"
        android:padding="15dp">

        <Spinner
            android:id="@+id/spinnerCountries"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:digits="0123456789"
            android:inputType="phone"
            android:hint="@string/_07xxxxxxxx"
            android:fontFamily="@font/century"
            android:maxLength="10"
            android:singleLine="true"
            android:autofillHints="phone" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_background"
        android:text="@string/send_code"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:imeOptions="actionSend"
        tools:ignore="TextViewEdits" />


</RelativeLayout>