<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_gradient">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/linear01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relative01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/century"
                android:text="@string/my_schedule"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_view_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/century"
                android:text="@string/date"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

        </RelativeLayout>
        <!--        profile image layout here-->
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear01">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:fontFamily="@font/century"
            android:text="@string/today_s_todo_list"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:maxHeight="140dp"
            android:minHeight="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/task_recycler"
                    android:layout_width="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_height="wrap_content"
                    />


        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative02">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/century"
            android:text="My Companions"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:maxHeight="70dp"
            android:elevation="70dp"
            android:minHeight="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/companions_recycler"
                android:layout_width="wrap_content"
                android:layout_margin="1dp"
                android:layout_height="wrap_content"
                />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative03">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/upcoming_header"
            android:layout_marginStart="35dp"
            android:text="Upcoming TODO List"
            android:fontFamily="@font/century"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcoming_recycler"
            android:layout_width="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/upcoming_header"
            android:layout_margin="3dp"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>

</RelativeLayout>



