<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SetupActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/setupToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/account_setup"
                android:fontFamily="@font/arialregular"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupToolbar">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/setupToolbar"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ProgressBar
                    android:id="@+id/setup_progress"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"/>

                <RelativeLayout
                    android:id="@+id/relative01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/setupToolbar">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/linear01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_marginTop="10dp"
                            android:id="@+id/setup_image"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:src="#3f2e90" />

                    </androidx.appcompat.widget.LinearLayoutCompat>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/scrollView2"
                    tools:layout_editor_absoluteX="-28dp">


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/compat01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="35dp"
                            android:text="@string/username"
                            android:fontFamily="@font/arialregular"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/setup_userName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="40dp"
                            android:layout_marginBottom="40dp"
                            android:layout_marginStart="40dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:inputType="text"
                            android:maxLength="15"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="#3f2e90"
                            android:textStyle="bold" />


                    </androidx.appcompat.widget.LinearLayoutCompat>


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="2">


                        <Button
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="25dp"
                            android:id="@+id/setup_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:layout_weight="1"
                            android:background="@drawable/button_background"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:backgroundTint="#3f2e90"
                            android:textAllCaps="false"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/update_account"
                            android:textColor="@color/white" />


                    </androidx.appcompat.widget.LinearLayoutCompat>
                </RelativeLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>